--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 <body>
     <script>
         let main=async ()=>{
-            let res=await fetch({
-                url:"./config.json",
-                method:"GET"
-            });
+            let res=await fetch("./config.json");
             let config=await res.json()
+            console.log(config);
             let url=config.url;
             window.location.href=url;
         }
-        
+        main();
     </script>
 </body>
 </html>
