--- a/content/testdl/testmd.html
+++ b/content/testdl/testmd.html
@@ -12,7 +12,8 @@
 <body>
     <!--模板引擎 arttemplate  -->
     
-    <script src="https://cdn.bootcss.com/prism/1.15.0/prism.js"></script>
-  <script src="https://cdn.bootcss.com/prism/1.15.0/components/prism-javascript.js"></script>
+    
+    <script src="https://myCDN.com/prism@v1.x/components/prism-core.min.js"></script>
+	<script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script>
 </body>
 </html>
