生成器修改和转换器修改，添加文章元信息保存和内容元信息保存，解决prism高亮问题，允许自定义语言

--- a/content/testdl/testmd.html
+++ b/content/testdl/testmd.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,9 +9,11 @@
 </head>
 <body>
     <!--模板引擎 arttemplate  -->
-    
+    <h1 id="&#x6807;&#x9898;">&#x6807;&#x9898;</h1>
+<p>&#x6D4B;&#x8BD5;&#x4E00;&#x4E0B;</p>
+
     
     <script src="https://myCDN.com/prism@v1.x/components/prism-core.min.js"></script>
 	<script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script>
-</body>
-</html>
+
+</body></html>
