添加初始化流程，但程序中尚未进行调用 目前先解决其他问题

--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
 </head>
 <body>
     <script>
-        let main=async ()=>{
-            let res=await fetch("./config.json");
-            let config=await res.json()
-            console.log(config);
-            let url=config.url;
-            window.location.href=url;
-        }
-        main();
+        window.location.href="./nowSite/index.html"
     </script>
 </body>
 </html>
