--- a/nowSite/index.html
+++ b/nowSite/index.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     测试
+    <div>
+
+    </div>
+    <script>
+        async function main()
+        {
+            let r=await fetch("../content/files.json");
+            let s=await r.json()
+            for(let k in s){
+                let t=await (await fetch(k)).text()
+                document.querySelector("div").innerText+=`${s[k]}:${t}\n`;
+            }
+            
+        }
+        main()
+    </script>
 </body>
 </html>
