--- a/nowSite/index.html
+++ b/nowSite/index.html
@@ -18,7 +18,7 @@
             let s=await r.json()
             for(let k in s){
                 let t=await (await fetch(k)).text()
-                document.querySelector("div").innerText+=`${s[k]}:${t}\n`;
+                document.querySelector("div").innerHTML+=`<a href="${k}">${s[k]}:${t}\n</a>`;
             }
             
         }
