--- a/sites/default/index.html
+++ b/sites/default/index.html
@@ -33,5 +33,15 @@
             }
             main()
     </script>
+    <style>
+        li{
+            list-style: none;
+            background: rgba(255, 187, 0, 0.534);
+            box-shadow: 0 0 2px 2px black;
+            margin:20px;
+            padding:20px;
+        }
+    </style>
+
 </body>
 </html>
