试着用react写列表

--- a/nowSite/index.html
+++ b/nowSite/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>测试一下</title>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 <body>
     测试
+    <div>
+
+    </div>
     <ul>
     </ul>
     <script>
@@ -42,5 +47,6 @@
         }
     </style>
 
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
