--- a/sites/default/index.html
+++ b/sites/default/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>测试一下</title>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 <body>
     测试
+    <div>
+
+    </div>
     <ul>
     </ul>
     <script>
@@ -31,9 +36,10 @@
                 
             }
             main()
+
     </script>
     <style>
-        li{
+        .item{
             list-style: none;
             background: rgba(255, 187, 0, 0.534);
             box-shadow: 0 0 2px 2px black;
@@ -42,5 +48,6 @@
         }
     </style>
 
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
