--- a/sites/default/index.html
+++ b/sites/default/index.html
@@ -16,36 +16,26 @@
     <ul>
     </ul>
     <script>
-            async function main()
-            {
-                let r=await fetch("../content/files.json");
-                let s=await r.json()
-                let ss={}
-                for(let k in s){
-                    ss[k]=fetch(k)
-                }
-                for(let k in s){
-                    let t=await (await ss[k]).json()
-                    let str=""
-                    for(let i in t){
-                        str+=`${i}:${t[i]}<br>`
-                    }
-                    str="<br>"+str;
-                    document.querySelector("ul").innerHTML+=`<li><a href="${k.replace(/.json$/,".html")}">${s[k].title}:${str}</a></li>`;
-                }
-                
-            }
-            main()
 
+            exports={}
+            require=(v)=>{
+                let tab={
+                    react:React,
+                    "react-dom":ReactDOM
+                }
+                return tab[v];
+            }
     </script>
     <style>
         .item{
             list-style: none;
-            background: rgba(255, 187, 0, 0.534);
-            box-shadow: 0 0 2px 2px black;
+            background: rgba(255, 255, 255, 0.781);
+            box-shadow: 0 0 12px 3px #0000003b;
             margin:20px;
             padding:20px;
         }
+
+
     </style>
 
     <script src="./scripts/index.js"></script>
