解决了server的可配置性问题，使用cluster代替childprocess 记录一个bug：重新生成后，再次重新生成时会少about.（或者说article根目录的文章)

--- a/nowSite/index.html
+++ b/nowSite/index.html
@@ -30,7 +30,7 @@
         .item{
             list-style: none;
             background: rgba(255, 255, 255, 0.781);
-            box-shadow: 0 0 2px 5px black;
+            box-shadow: 0 0 12px 3px #0000003b;
             margin:20px;
             padding:20px;
         }
