修改网站标题

--- a/nowSite/index.html
+++ b/nowSite/index.html
@@ -9,7 +9,8 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 <body>
-    测试
+    <h1>我的博客</h1>
+    <hr style="margin-bottom: 30px">
     <div>
 
     </div>
