watch添加监视网站的函数，server默认监视文章和配置文件中指定是site default主题修复了bug，完全react实现，添加了轮询实现的scrollWidthContainer 下一步准备添加透明不遮挡事件的MouseArea事件拦截器

--- a/nowSite/index.html
+++ b/nowSite/index.html
@@ -9,13 +9,10 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 <body>
-    <h1>我的博客</h1>
-    <hr style="margin-bottom: 30px">
-    <div>
+    <div id="page">
 
     </div>
-    <ul>
-    </ul>
+
     <script>
 
             exports={}
