--- a/sites/default/index.html
+++ b/sites/default/index.html
@@ -9,13 +9,10 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 <body>
-    <h1>我的博客</h1>
-    <hr style="margin-bottom: 30px">
-    <div>
+    <div id="page">
 
     </div>
-    <ul>
-    </ul>
+
     <script>
 
             exports={}
