添加refresh命令和dev命令 npm scripts中 把use任务改为refresh任务 修改default背景图 修复bug

--- a/nowSite/index.html
+++ b/nowSite/index.html
@@ -25,6 +25,11 @@
             }
     </script>
     <style>
+        html,body{
+            margin:0;
+            padding: 0;
+            list-style: none;
+        }
         .item{
             list-style: none;
             background: rgba(255, 255, 255, 0.781);
