--- a/sites/default/index.html
+++ b/sites/default/index.html
@@ -25,6 +25,11 @@
             }
     </script>
     <style>
+        html,body{
+            margin:0;
+            padding: 0;
+            list-style: none;
+        }
         .item{
             list-style: none;
             background: rgba(255, 255, 255, 0.781);
