尝试把模板html中引用cdn的css文件改到本地

--- a/static/article_template.html
+++ b/static/article_template.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://cdn.bootcss.com/prism/1.15.0/themes/prism.css" rel="stylesheet">
+    <link href="{{cssurl}}" rel="stylesheet">
     <!-- <link rel="stylesheet" href="./node_modules/highlight.js/styles/default.css">
     <link rel="stylesheet" href="./node_modules/highlight.js/styles/solarized-light.css"> -->
 </head>
