--- a/static/head.html
+++ b/static/head.html
@@ -1,11 +1,16 @@
 <!-- art-template模板文件 用于给所有site的html文件前面加上自动刷新脚本 -->
+
+{{@ content}}
 <script>
     //自动刷新 测试
-    window.addEventListener("load",(e)=>{
-        let func=()=>{
-            console.log("测试");
-        }
-        setInterval(func,1000);
-    })
+    let flag="_inlistening";
+    if(!window[flag]){
+        window.addEventListener("load",(e)=>{
+            let func=()=>{
+                window.location.reload();
+            }
+            setInterval(func,5000);
+        })
+        window[flag]=true;
+    }
 </script>
-{{@ content}}
