sync程序成功使用runInThread 尝试使用infer改造runInThread 未测试

--- a/content/testss/hhh.html
+++ b/content/testss/hhh.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <!--模板引擎 arttemplate  -->
-    
+    <h1 id="&#x8BF4;&#x660E;&#x8BF4;&#x660E;">&#x8BF4;&#x660E;&#x8BF4;&#x660E;</h1>
+<p>&#x8FD9;&#x662F;&#x7531; yarn blog new a ./testss hhh &#x521B;&#x5EFA;&#x7684;&#x6587;&#x4EF6;</p>
+
     
  
 
