--- a/content/ceshi.html
+++ b/content/ceshi.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <embed style="min-height: 100vh;" src="/content/ceshi.dir/article.pdf" type="application/pdf" width="100%" height="100%">
+    <embed style="min-height: 100vh;" src="/BeautifulBlog/content/ceshi.dir/article.pdf" type="application/pdf" width="100%" height="100%">
 </body>
 </html>
