--- a/sites/default/index.html
+++ b/sites/default/index.html
@@ -36,6 +36,7 @@
             box-shadow: 0 0 12px 3px #0000003b;
             margin:20px;
             padding:20px;
+            margin-top:0;
         }
 
 
